corrected tests